# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  buildAndRun.sh  deploy_prod.sh  docker-compose.yml  flask_config.py  item.py  main.tf  outputs.tf  pyproject.toml  requeststests.py  requirements.txt  test_viewModel.py  travis_performance.md  trelloData.py  trello_functions.py  variables.tf  viewModel.py
app/: app.py  item.py  test_view_model.py  trello_client.py  trello_data.py  trello_functions.py  trello_ids.py  trello_info.py  view_model.py
app/templates/: index.html
application/: app.py  item.py  item_view_model.py  mongo_client.py  trello_client.py  user.py  user_view_model.py  valid_roles.py  view_model.py
application/templates/: forbidden.html  index.html  login.html  manage-users.html
documentation/: README.md  architecture-diagrams.drawio
poetry-env/: pyproject.toml
templates/: index.html
tests/: test_integration.py  test_integration_tests.py  test_view_model.py
tests/tests_e2e/: test_e2e.py
tests/tests_integration/: mock_mongo_collection.py  mock_mongo_db.py  test_integration.py
tests/tests_unit/: test_view_model.py
tests_e2e/: test_e2e.py
tests_e2e_1/: test_e2e.py
tests_e2e_12/: test_e2e.py
tests_e2e_123/: test_e2e.py
tests_e2e_13/: test_e2e.py
tests_e2e_2/: test_e2e.py
tests_e2e_23/: test_e2e.py
tests_e2e_3/: test_e2e.py
tests_integration/: mock_mongo_db.py  mock_response.py  test_integration.py
tests_unit/: test_view_model.py
