[tool.poetry]
name = "poetry-env"
version = "0.1.0"
description = ""
authors = ["Sam Seed <sam.seed@softwire.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
colorama = "0.4.3"
Flask = "1.1.1"
more-itertools = "8.4.0"
packaging = "20.4"
pluggy = "0.13.1"
py = "1.9.0"
pyparsing = "2.4.7"
python-dotenv = "0.12.0"
requests = "2.24.0"

[tool.poetry.dev-dependencies]
pytest = "6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = false
